  * PixelColor off by one on i386 (reference
    https://github.com/ImageMagick/ImageMagick/issues/54).

2015-11-03  6.9.2-6 Dirk Lemstra <dirk@lem.....org>
  * Added local contrast enhancement.
  * Fixed bug in SetPixelCacheExtent that made images all black (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=28514).

2015-11-02  6.9.2-6 Samuel Thibault <samuel.thibault@...org> 
  * Added 6dot variant for unicode and iso braille formats (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=2&p=127111).

2015-10-31  6.9.2-5 Cristy  <quetzlzacatenango@image...>
  * New version 6.9.2-5, GIT revision 10316:86a76b6:20151031.

2015-10-15  6.9.2-5 Dirk Lemstra <dirk@lem.....org>
  * Fixed alpha blending issue with semi-transparent pixels in the merged
    image of PSD files. This can be disabled by setting the option
    'psd:alpha-unblend' to 'off' (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=28169).
  * Fixed issue in jpeg:extent that prevented it from working (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&p=126638).
  * Fixed memory leak when reading Photoshop layers in a TIFF file.

2015-10-12  6.9.2-5 Cristy  <quetzlzacatenango@image...>
  * Support gradient:bounding-box, gradient:vector, gradient:center, and
    gradient:radius to shape the gradient rendering.
  * Recognize label:@- as stdin (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=28501).
  * Make commas optional for coordinates (e.g. 0,0 256,256).

2015-10-10  6.9.2-4 Cristy  <quetzlzacatenango@image...>
  * New version 6.9.2-4, GIT revision 10273:e00cf21:20151010

2015-10-08  6.9.2-4 Dirk Lemstra <dirk@lem.....org>
  * Fixed accessing subimage in a TIFF photoshop layer (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=28469).
  * Fixed out of bounds error in -splice (reference